objects/FlowPersonalConfiguration__c.object
<CustomObject>
    <label>Flow Personal Configuration</label>
    <nameField>
        <displayFormat>FPC-{0000}</displayFormat>
        <label>FlowPersonalConfiguration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlowPersonalConfigurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ActorId__c</fullName>
        <label>Actor Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LocationId__c</fullName>
        <label>Location Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config1Name__c</fullName>
        <label>Config1Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config2Name__c</fullName>
        <label>Config2Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config3Name__c</fullName>
        <label>Config3Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config1Value__c</fullName>
        <label>Config1Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config2Value__c</fullName>
        <label>Config2Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Config3Value__c</fullName>
        <label>Config3Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>